--- a/eQueue/eQueue-war/web/updateStore.xhtml
+++ b/eQueue/eQueue-war/web/updateStore.xhtml
@@ -4,53 +4,53 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Update Store Variables</title>        
+        <title>Update Store</title>        
         <h:outputStylesheet library="css" name="default.css" />
     </h:head>
     <h:body>
 
-        <h2>Update Store Variables</h2>
+        <h2>Update Store</h2>
 
-        #{updateStoreVariablesManagedBean.foo()}
+        #{updateStoreManagedBean.foo()}
         <h:form id="Variables">
 
             <h:messages errorClass="errorTextsWithBullet" fatalClass="errorTextsWithBullet" infoClass="infoTextsWithBullet" globalOnly="true" />
             <br/>
-            <h:commandLink value="Back" actionListener="#{updateStoreVariablesManagedBean.back}" />
+            <h:commandLink value="Back" actionListener="#{updateStoreManagedBean.back}" />
             <br/><br/>
 
-            <h:panelGrid style="border-style: groove; width: 40%"  columns="3" rendered="#{updateStoreVariablesManagedBean.storeVariablesToUpdate != null}">
+            <h:panelGrid style="border-style: groove; width: 40%"  columns="3" rendered="#{updateStoreManagedBean.storeToUpdate != null}">
 
                 <h:outputText style="font-weight: bold" value="Store Name"/>
-                <h:inputText id="txtName" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.storeName}"/>
+                <h:inputText id="txtName" value="#{updateStoreManagedBean.storeToUpdate.storeName}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtName" />
 
                 <h:outputText style="font-weight: bold;" value="Email"/>
-                <h:inputText id="txtEmail" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.storeEmail}"/>
+                <h:inputText id="txtEmail" value="#{updateStoreManagedBean.storeToUpdate.storeEmail}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtEmail" />
 
                 <h:outputText style="font-weight: bold;" value="Address"/>
-                <h:inputText id="txtAddress" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.storeAddress}"/>
+                <h:inputText id="txtAddress" value="#{updateStoreManagedBean.storeToUpdate.storeAddress}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtAddress" />
 
                 <h:outputText style="font-weight: bold;" value="Contact"/>
-                <h:inputText id="txtContent" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.storeContact}"/>
+                <h:inputText id="txtContent" value="#{updateStoreManagedBean.storeToUpdate.storeContact}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtContact" />
                 
                 <h:outputText style="font-weight: bold;" value="Queue Waiting Time(Minutes)"/>
-                <h:inputText id="txtWaitingTime" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.estimatedQueueUnitWaitingMinutes}"/>
+                <h:inputText id="txtWaitingTime" value="#{updateStoreManagedBean.storeToUpdate.estimatedQueueUnitWaitingMinutes}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtWaitingTime" />
 
                 <h:outputText style="font-weight: bold;" value="Allocation Response Time(Minutes)"/>
-                <h:inputText id="txtResponseTime" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.allocationGraceWaitingMinutes}"/>
+                <h:inputText id="txtResponseTime" value="#{updateStoreManagedBean.storeToUpdate.allocationGraceWaitingMinutes}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtResponseTime" />
 
                 <h:outputText style="font-weight: bold;" value="Message of the Day"/>
-                <h:inputText id="txtMessage" value="#{updateStoreVariablesManagedBean.storeVariablesToUpdate.messageOfTheDay}"/>
+                <h:inputText id="txtMessage" value="#{updateStoreManagedBean.storeToUpdate.messageOfTheDay}"/>
                 <h:message errorClass="errorTextsNoMarginLeft" fatalClass="errorTextsNoMarginLeft" for="txtMessage" />
 
-                <h:commandButton value="Update" type="submit" rendered="#{updateStoreVariablesManagedBean.storeVariablesToUpdate != null}">
-                    <f:ajax event="click" execute="@form" render="@form" listener="#{updateStoreVariablesManagedBean.updateVariables()}" />
+                <h:commandButton value="Update" type="submit" rendered="#{updateStoreManagedBean.storeToUpdate != null}">
+                    <f:ajax event="click" execute="@form" render="@form" listener="#{updateStoreManagedBean.update()}" />
                 </h:commandButton>
 
             </h:panelGrid>
