--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -10,8 +10,8 @@
     <ui:define name="content">
         <h:outputStylesheet library="css" name="homepage.css" />
         <div class="outer-container">
-            <p:fieldset legend="Store" style="height: 140px">
-                <h:panelGrid columns="5" cellpadding="5">
+            <p:panel header="Store">
+                <h:panelGrid class="panel-grid-container" columns="5" cellpadding="10">
                     <p:link>
                         <p:panel class="link-panel-container">
                             <h:panelGrid>
@@ -68,7 +68,7 @@
                         </p:panel>
                     </p:link>
                 </h:panelGrid>
-            </p:fieldset>
+            </p:panel>
         </div>
 
     </ui:define>
