--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -10,7 +10,23 @@
 
     <ui:define name="content">
         <h:outputStylesheet library="css" name="default.css" />
+        <style>
+            .ui-datagrid-header {
+                font-size: medium;
+            }
+            .ui-panel-title {
+                font-size: small;
+            }
+            .ui-datagrid-column {
+                vertical-align: top;
+            }
+            .txtAlignCenter {
+                text-align: center;
+            }
+        </style>
+
         <h:form>
+            <p:growl redisplay="false" life="2500" />
             <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.filteredCustomerOrders}" var="order" columns="3" rows="9" paginator="true" 
                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                         rowsPerPageTemplate="9,12,15">
@@ -18,7 +34,7 @@
                     Current Ongoing Orders
                 </f:facet>
 
-                <p:panel style="text-align: center; margin: 2.5px 2.5px 2.5px 2.5px;">
+                <p:panel style="text-align: center; margin: 2px 2px 2px 2px;">
                     <f:facet name="header">
                         <h:outputLabel value="Order ID - #{order.orderId}" />
                         <br />
@@ -33,7 +49,13 @@
                         </p:column>
 
                         <p:column headerText="Quantity">
-                            <h:outputText value="#{item.quantity}" />
+                            <div class="txtAlignCenter">
+                                <h:outputText value="#{item.quantity}" />
+                            </div>
+                        </p:column>
+
+                        <p:column headerText="Remarks">
+                            <h:outputText value="#{item.remarks}" />
                         </p:column>
 
                         <p:column headerText="Status">
@@ -41,8 +63,16 @@
                         </p:column>
 
                         <p:column headerText="Action">
-                            <p:commandButton rendered="#{item.status == 'ORDERED'}" value="Prepare" icon="custom-icon cooking-icon" />
-                            <p:commandButton rendered="#{item.status == 'PREPARING'}" value="Serve" icon="custom-icon serve-icon" />
+                            <div class="txtAlignCenter">
+                                <p:commandButton rendered="#{item.status == 'ORDERED'}" update="@form" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}" >
+                                    <f:attribute name="orderItemToPrepare" value="#{item}" />
+                                    <!--<f:setPropertyActionListener value="{item}" target="{kitchenManagementManagedBean.orderItemToPrepare}" />-->
+                                </p:commandButton>
+                                <p:commandButton rendered="#{item.status == 'PREPARING'}" update="@form" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
+                                    <f:attribute name="orderItemToServe" value="#{item}" />
+                                    <!--<f:setPropertyActionListener value="{item}" target="{kitchenManagementManagedBean.orderItemToServe}" />-->
+                                </p:commandButton>
+                            </div>
                         </p:column>
                     </p:dataTable>             
 
