--- a/eQueue/eQueue-war/web/diningTableManagement.xhtml
+++ b/eQueue/eQueue-war/web/diningTableManagement.xhtml
@@ -2,10 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ez="http://java.sun.com/jsf/composite/ezcomp"
-                xmlns:p="http://primefaces.org/ui"
                 template="/template/defaultTemplate.xhtml">
 
     <ui:define name="content">
@@ -47,7 +47,7 @@
                             </p:column>
 
                             <p:column headerText="Time Since Occupied" >
-                               
+                                <h:outputText value="" />
                             </p:column>
 
                             <p:column headerText="Action" >
