--- a/eQueue/eQueue-war/web/resources/ezcomp/ViewDiningTable.xhtml
+++ b/eQueue/eQueue-war/web/resources/ezcomp/ViewDiningTable.xhtml
@@ -40,8 +40,7 @@
                             <h:outputLabel value="QR Code: " />
                         </p:column>
                         <p:column>
-                             <p:graphicImage width="200" height="200" library="images" name="qrcode/#{viewDiningTableManagedBean.diningTableToView.qrCode}.png" alt="#{viewDiningTableManagedBean.diningTableToView.qrCode}" />
-
+                             <p:barcode type="qr" value="#{viewDiningTableManagedBean.diningTableToView.qrCode}" />
                         </p:column>
                     </p:row>
                     
